bulb image used

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 	<div class="lamps">
 
 		<div id="lamp-1" class="lamp">
+			<img src="bulb.png">
 		</div>
 		<div id="lamp-2" class="lamp">
+			<img src="bulb.png">
 		</div>
 		<div id="lamp-3" class="lamp">
+			<img src="bulb.png">
 		</div>
 
 	</div>
