onclick example added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<div class="lamps">
 
-		<div id="lamp-1" class="lamp">
+		<div id="lamp-1" class="lamp" onclick="lampClicked(this);">
 			<img src="bulb.png">
 		</div>
 		<div id="lamp-2" class="lamp">
